otel-go-example/k8s/otel-go-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-go-example
  labels:
    provider: service-foundry  
spec:
  type: ClusterIP  # ClusterIP, NodePort, or LoadBalancer
  #  type: LoadBalancer
  ports:
    - port: 8080
  selector:
    app: otel-go-example
